tests/NormalTests/paczka1/fuzzy1/32134452.err
Error in line 1: A465 S74 29,5
Error in line 5: kubtoHd0RZr S74 54,6
Error in line 6: JRR S709 15,6
Error in line 9: kubtoHd0RZr S709 82,2
Error in line 10: JRR S74 54,0
Error in line 16: omEYUfSxK A413 36,8
Error in line 19: JRR A413 49,5
Error in line 20: omEYUfSxK S74 73,6
Error in line 23: omEYUfSxK S709 17,3
Error in line 13: yTXrD A413 87,9
Error in line 30: yTXrD S74 68,3
Error in line 28: omEYUfSxK A465 2,4
